style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  font-size: 62.5%;

  --light-blue: #8ecae6;
  --mid-blue: #219ebc;
  --dark-blue: #023047;
  --yellow: #ffb703;
  --dark-yellow: #fb8500;
}

body {
  font-size: 1.6rem;
  color: var(--dark-blue);

  background-color: #e2f6fc;
}

body * {
  font-family: 'Open Sans', sans-serif;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: none;
}

button, #btn-sortear {
  background-color: var(--mid-blue);
  border: none;
  color: #fff;
  font-weight: 700;
  padding: .8rem 1.6rem;
  border-radius: 0 .4rem .4rem 0;

  cursor: pointer;
}

#btn-sortear {
  background-color: var(--dark-yellow);
  border-radius: .4rem;
}

.remove button {
  border-radius: .4rem;
  background-color: var(--yellow);
  padding: .2rem .8rem ;
}

#app {
 display: flex;
 flex-direction: column;
 align-items: center;

 padding: 1.6rem;

 gap: 4rem;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2.4rem;
}



.add {
  display: flex;
}

.add input {
  padding: .8rem 1.6rem;
  border-radius:  .4rem 0 0 .4rem;
  border: none;
  color: var(--dark-blue);
}

.add input::placeholder {
  color: #6e6e6e;
}

table {
  width: 100%;
  border-collapse: collapse;
  margin-bottom: 1.2rem;
}

table * {
  font-size: clamp(1.4rem, 2vw, 1.6rem );
  color: var(--dark-blue);
}

tbody {
  display: block;
  max-height: 40rem;
  overflow: auto;
  overflow-x: hidden;
}

thead, tbody tr {
  display: table;
  table-layout: fixed;
  width: 100%;
}

table th {
  background: var(--dark-blue);
  color: #fff;
  font-weight: 400;
}

table th:first-child {
  border-top-left-radius: .4rem;
}

table th:last-child {
  border-top-right-radius: .4rem;
}

table td:first-child {
  border-bottom-left-radius: .4rem ;
}

table td:last-child {
  border-bottom-right-radius: .4rem ;
}

table tr:nth-child(even) {
  background:var(--light-blue);
  
}

table tr:nth-child(odd) {
  background:  #bfebff;
  
}

table th {
  padding: 1.6rem 2.4rem 1.6rem 4rem;
}

table td {
  padding: 2.4rem 2.4rem 2.4rem 4rem;
  text-align: center;
}

